jujy-log/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: juyoung-service
spec:
  ports:
    - name: "3000"
      port: 3001
      targetPort: 3000
  selector:
    app: juyoung-app
  type: LoadBalancer
